--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 
 spring.application.name=kafka-tutorial
 
-spring.kafka.bootstrap-servers=142.4.211.198:9092
+spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.producer.retries=0
 spring.kafka.producer.batch-size=16384
 spring.kafka.producer.buffer-memory=33554432
 
-spring.kafka.consumer.group-id=consumer-tutorial
+spring.kafka.consumer.group-id=consumer-tutorial-2
 spring.kafka.consumer.auto-commit-interval=100
-spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.auto-offset-reset=latest
 spring.kafka.consumer.enable-auto-commit=false
 spring.kafka.listener.concurrency=3
 spring.kafka.consumer.partition.assignment.strategy = com.gravel.kafkaTutorial.config.AverageTopicAssignor
